--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,18 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Om oss
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <ion-card>
+    <ion-card-title>
+    An Ion Card Title
+    </ion-card-title>
+      <ion-card-content>
+        <img src="assets/icon/eldstadoriginal.jpg"/>
+      </ion-card-content>
+  </ion-card>
 </ion-content>
