--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,23 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Kontakt
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-left></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+  <ion-card>
+   <ion-list>
+    <ion-list-header>Här hittar ni olika sätt att nå oss på</ion-list-header>
+        <ion-item>
+          <ion-icon name="logo-instagram" item-left></ion-icon>
+            <a href="#" onClick="window.open(' https://www.instagram.com/eldstadnorth/','_blank','location=yes');return false;"> EldstadNorth</a>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="ios-at" item-left></ion-icon>
+            eldstadnorth@gmail.com
+        </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
