--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,15 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Hem</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content padding class="home">
+  <ion-card>
+    <ion-card-header> Välkommen till Eldstad  <ion-icon name="heart"></ion-icon> </ion-card-header>
+      <img src="assets/icon/eldstadoriginal.jpg"/>
+       <p> 
+         Eldstad är en app som har ett syfte. Det här syftet är att göra människor glada. Hurra!
+      </p>
+  </ion-card>
 </ion-content>
