Added camping spots details page and general polishing

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,18 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Om oss
-    </ion-title>
+    <ion-title>Hem</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding class="home">
   <ion-card>
-    <ion-card-title>
-    An Ion Card Title
-    </ion-card-title>
-      <ion-card-content>
-        <img src="assets/icon/eldstadoriginal.jpg"/>
-      </ion-card-content>
+    <ion-card-header> Välkommen till Eldstad  <ion-icon name="heart"></ion-icon> </ion-card-header>
+        <div class="col col-33">
+          <img src="assets/icon/eldstadoriginal.jpg"/>
+        </div>
+       <p> 
+         Eldstad är en app som har ett syfte. Det här syftet är att göra människor glada. Hurra!
+      </p>
   </ion-card>
 </ion-content>
