--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,27 @@
 <ion-content padding class="home">
   <ion-card>
     <ion-card-header> Välkommen till Eldstad  <ion-icon name="heart"></ion-icon> </ion-card-header>
-      <img src="assets/icon/eldstadoriginal.jpg"/>
+      <div class="col col-33">
+       <img src="assets/icon/eldstadoriginal.jpg"/>
+      </div>
        <p> 
-         Eldstad är en app som har ett syfte. Det här syftet är att göra människor glada. Hurra!
+         Vad är Eldstad?
+         Syftet med Eldstad är att hjälpa varandra att njuta av vår vackra natur. 
+         Navigera i appen genom verktygsfältet nedan.
+         Under Eldstäder kan man se befintliga camping platser! 
       </p>
   </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+    Favoritplatser
+    </ion-card-header>
+  </ion-card>
+
+<ion-card>
+    <ion-card-header>
+    Lägg till platser
+    </ion-card-header>
+  </ion-card>
+
 </ion-content>
