--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -9,7 +9,7 @@
 <ion-content>
   <ion-card>
    <ion-list>
-    <ion-list-header>Här hittar ni olika sätt att nå oss på</ion-list-header>
+    <ion-list-header>Här hittar ni olika sätt att nå oss</ion-list-header>
         <ion-item>
           <ion-icon name="logo-instagram" item-left></ion-icon>
             <a href="#" onClick="window.open(' https://www.instagram.com/eldstadnorth/','_blank','location=yes');return false;"> EldstadNorth</a>
@@ -17,6 +17,10 @@
         <ion-item>
           <ion-icon name="ios-at" item-left></ion-icon>
             eldstadnorth@gmail.com
+        </ion-item>
+        <ion-item>
+          <ion-icon name="ios-bug" item-left></ion-icon>
+            ellenmarianilsson1@gmail.com
         </ion-item>
     </ion-list>
   </ion-card>
