Added sample camping spots och general polish

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Hem</ion-title>
+    <ion-title>Om Eldstad</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -14,4 +14,17 @@
          Eldstad är en app som har ett syfte. Det här syftet är att göra människor glada. Hurra!
       </p>
   </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Historia om Eldstad
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      Människorna bakom Eldstad
+    </ion-card-header>
+  </ion-card>
+
 </ion-content>
