--- a/src/pages/camping-spots-details/camping-spots-details.html
+++ b/src/pages/camping-spots-details/camping-spots-details.html
@@ -1,10 +1,43 @@
 
 <ion-header>
   <ion-navbar>
-    <ion-title>Eldstad Detaljer</ion-title>
+    <ion-title>Detaljer för Eldstad</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+<ion-card>
+  <ion-item>
+    <ion-icon name="md-person" item-left></ion-icon>
+    <h2>Nära: Rushworth, State Forest</h2>
+    <p>Latitud: 36.68604°S Longitud: 144.92615°E</p>
+  </ion-item>
 
+  <img src="../assets/campingspots/australia2.jpg">
+
+  <ion-card-content>
+    <p>Ett ställe med härligt utsiktsplats. Mycket träd men plats för 4-mannatält. Torr mark så var försiktig med eldning.</p>
+  </ion-card-content>
+
+  <ion-row>
+    <ion-col>
+      <button ion-button icon-left clear small>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>12 Likes</div>
+      </button>
+    </ion-col>
+    <ion-col>
+      <button ion-button icon-left clear small>
+        <ion-icon name="text"></ion-icon>
+        <div>4 Kommentarer</div>
+      </button>
+    </ion-col>
+    <ion-col center text-center>
+      <ion-note>
+        11h ago
+      </ion-note>
+    </ion-col>
+  </ion-row>
+
+</ion-card>
 </ion-content>
