--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Hem" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Eldstäder" tabIcon="flame"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Om oss" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Om Eldstad" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Kontakt" tabIcon="contacts"></ion-tab>
   
 </ion-tabs>
